Site header html and css

--- a/index.html
+++ b/index.html
@@ -7,13 +7,17 @@
         <title>QuinStreet Frontend Developer test</title>
     </head>
     <body>
-        <div>
-            <header>
-                <h1 class="sr-only">
-                    Nest Learning Thermostat contest entry form
-                </h1>
-                <img src="./img/Logo.png" alt="Modernize Logo" />
-            </header>
+        <header class="page__header">
+            <h1 class="sr-only">
+                Nest Learning Thermostat contest entry form
+            </h1>
+            <img
+            class="page__header--logo"
+            src="./img/Logo.png"
+            alt="Modernize Logo"
+            />
+        </header>
+        <div class="content-wrapper">
             <main>
                 <article>
                     <header>
