Update html and css for advertorial styles

--- a/index.html
+++ b/index.html
@@ -101,20 +101,26 @@
                         </div>
                     </form>
                 </article>
-                <article>
-                    Even more savings
-                    <div>
-                        <header>
-                            <p>Advertorial</p>
-                            <h2>Tricks Homeowners Use to Eliminate Bills</h2>
-                        </header>
-                        <p>
-                            Surging energy bills, unpredictable weather patterns
-                            and dissatisfaction with utility companies have
-                            homeowners scrambling...
-                            <a href="www.google.com">Read more</a>
-                        </p>
-                    </div>
+                <article class="advertorial">
+                    <fieldset role="presentation">
+                        <legend>Even more savings</legend>
+                        <div class="advertorial__content">
+                            <header class="advertorial__content--header">
+                                <p class="header-highlight">Advertorial</p>
+                                <h2>
+                                    Tricks Homeowners Use to Eliminate Bills
+                                </h2>
+                            </header>
+                            <p>
+                                Surging energy bills, unpredictable weather
+                                patterns and dissatisfaction with utility
+                                companies have homeowners scrambling...
+                                <a class="read-more" href="www.google.com"
+                                    >Read more</a
+                                >
+                            </p>
+                        </div>
+                    </fieldset>
                 </article>
             </main>
         </div>
