Form input requirements

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
                                     id="name"
                                     type="text"
                                     name="name"
+                                    minlength="2"
                                     placeholder="Name"
                                 />
                             </div>
@@ -76,6 +77,7 @@
                                     type="tel"
                                     name="phone"
                                     placeholder="Phone Number"
+                                    required
                                 />
                             </div>
                             <div>
@@ -88,6 +90,7 @@
                                     type="email"
                                     name="email"
                                     placeholder="Email Address"
+                                    required
                                 />
                             </div>
                             <div class="button-flex">
