Add JS for form functionality

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                         </h2>
                     </header>
                     <form
+                        id="form"
                         class="contest__form"
                         action="https://formsws-hilstaging-com-0adj9wt8gzyq.runscope.net/solar"
                         method="post"
@@ -127,5 +128,6 @@
                 </article>
             </main>
         </div>
+        <script src="app.js"></script>
     </body>
 </html>
